--- a/final-spring/final-spring-aop/pom.xml
+++ b/final-spring/final-spring-aop/pom.xml
@@ -15,6 +15,10 @@
     <dependencies>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
+            <artifactId>final-data-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-json-core</artifactId>
         </dependency>
         <dependency>
