--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
-
+github:
+  blob: https://github.com/likly/final-framework/blob/master
 # Build settings
 markdown: kramdown
 highlighter: rouge
