--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 
 after_script:
+  - pwd
   - git add .
   - git commit -m "update"
   - git push --force --quiet "https://${coding_user}:${coding_token}@${coding_repo}" master:master
