--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: java
 
 after_script:
-  - git push --force "https://${coding_user}:${coding_token}@${coding_repo}" master:master
+  - git push --force "https://likly:9741788be93d1d75556f8a5b7544ca184bcc7e64@git.coding.net/likly/final-framework.git" master:master
+
 
 branches:
   only:
