--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
         <velocity.core.version>2.1</velocity.core.version>
         <velocity.tool.version>3.0</velocity.tool.version>
         <squareup.javapoet.version>1.13.0</squareup.javapoet.version>
+        <guava.version>30.0-jre</guava.version>
+        <apache.commons.lang3.vserion>3.11</apache.commons.lang3.vserion>
+        <apache.commons.collections4.vserion>4.4</apache.commons.collections4.vserion>
 
         <!--CI-->
         <sonar.projectKey>likly_final-frameworks</sonar.projectKey>
@@ -109,6 +112,25 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${apache.commons.lang3.vserion}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${apache.commons.collections4.vserion}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.squareup</groupId>
                 <artifactId>javapoet</artifactId>
