--- a/final-boot/final-boot-autoconfigure/pom.xml
+++ b/final-boot/final-boot-autoconfigure/pom.xml
@@ -18,7 +18,6 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-core</artifactId>
@@ -28,6 +27,7 @@
         <dependency>
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-zookeeper</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.ifinal.finalframework.auto</groupId>
