--- a/final-framework/final-annotation/pom.xml
+++ b/final-framework/final-annotation/pom.xml
@@ -21,11 +21,11 @@
             <artifactId>final-auto-core</artifactId>
             <optional>true</optional>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.ifinal.finalframework.auto</groupId>-->
-<!--            <artifactId>final-auto-processor</artifactId>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.ifinal.finalframework.auto</groupId>
+            <artifactId>final-auto-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>shardingsphere-jdbc-core</artifactId>
