--- a/final-framework/final-dashboard/pom.xml
+++ b/final-framework/final-dashboard/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinal.finalframework</groupId>
-        <version>1.1.3</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
     <artifactId>final-dashboard</artifactId>
     <dependencies>
@@ -32,7 +32,7 @@
         <dependency>
             <artifactId>final-devops</artifactId>
             <groupId>org.ifinal.finalframework</groupId>
-            <version>1.1.3</version>
+            <version>1.1.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
