--- a/final-framework/final-data/pom.xml
+++ b/final-framework/final-data/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinal.finalframework</groupId>
-        <version>1.1.3</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
     <artifactId>final-data</artifactId>
     <dependencies>
