--- a/final-framework/final-mybatis/pom.xml
+++ b/final-framework/final-mybatis/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinal.finalframework</groupId>
-        <version>1.1.3</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
     <artifactId>final-mybatis</artifactId>
     <dependencies>
