--- a/final-framework/pom.xml
+++ b/final-framework/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>final-frameworks</artifactId>
         <groupId>org.ifinal.finalframework.frameworks</groupId>
-        <version>1.1.3</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
     <packaging>pom</packaging>
 
@@ -49,7 +49,7 @@
             <dependency>
                 <groupId>org.ifinal.finalframework.annotation</groupId>
                 <artifactId>final-annotation</artifactId>
-                <version>1.1.3</version>
+                <version>1.1.3-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
