--- a/final-starter/final-boot-starter-entity/pom.xml
+++ b/final-starter/final-boot-starter-entity/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>final-starter</artifactId>
         <groupId>org.ifinal.finalframework.starter</groupId>
-        <version>1.1.3</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
 
 </project>
