--- a/final-starter/final-boot-starter/pom.xml
+++ b/final-starter/final-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>final-starter</artifactId>
         <groupId>org.ifinal.finalframework.starter</groupId>
-        <version>1.1.3</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>final-boot-starter</artifactId>
@@ -15,7 +15,7 @@
         <dependency>
             <artifactId>final-annotation-core</artifactId>
             <groupId>org.ifinal.finalframework.annotation</groupId>
-            <version>1.1.3</version>
+            <version>1.1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <artifactId>final-core</artifactId>
