--- a/final-starter/pom.xml
+++ b/final-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>final-frameworks</artifactId>
         <groupId>org.ifinal.finalframework.frameworks</groupId>
-        <version>1.1.3</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
 
     <groupId>org.ifinal.finalframework.starter</groupId>
