--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>org.ifinal.finalframework.frameworks</groupId>
     <artifactId>final-frameworks</artifactId>
-    <version>1.1.3</version>
+    <version>1.1.3-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Final framework with Spring Boot</description>
@@ -26,7 +26,7 @@
         <lombok.version>1.18.16</lombok.version>
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <dubbo.boot.version>2.7.8</dubbo.boot.version>
-        <final.version>1.1.3</final.version>
+        <final.version>1.1.3-SNAPSHOT</final.version>
         <auto.service.version>1.0.0</auto.service.version>
         <auto.spring.version>1.0.0</auto.spring.version>
         <findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
