--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><!--
-  ~ Copyright 2020-2021 the original author or authors.
+  ~ Copyright 2020-2022 the original author or authors.
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
@@ -38,6 +38,7 @@
         <module>final-aop</module>
         <module>final-web</module>
         <module>final-json</module>
+        <module>final-poi</module>
     </modules>
 
     <properties>
