--- a/final-json/pom.xml
+++ b/final-json/pom.xml
@@ -88,6 +88,10 @@
             <groupId>org.ifinalframework.annotation</groupId>
             <artifactId>final-annotation-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
