--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>final-web</module>
         <module>final-json</module>
         <module>final-poi</module>
+        <module>final-security</module>
     </modules>
 
     <properties>
@@ -136,11 +137,15 @@
                 <version>1.3.0-SNAPSHOT</version>
             </dependency>
             <dependency>
+                <groupId>org.ifinalframework</groupId>
+                <artifactId>final-security</artifactId>
+                <version>1.3.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <artifactId>final-aop</artifactId>
                 <groupId>org.ifinalframework</groupId>
                 <version>1.3.0-SNAPSHOT</version>
             </dependency>
-
             <dependency>
                 <artifactId>final-context</artifactId>
                 <groupId>org.ifinalframework</groupId>
