--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <groupId>org.ifinalframework.project</groupId>
         <artifactId>final-project</artifactId>
-        <version>1.3.3</version>
+        <version>1.3.4-SNAPSHOT</version>
     </parent>
     <groupId>org.ifinalframework</groupId>
     <artifactId>final-framework</artifactId>
-    <version>1.3.3</version>
+    <version>1.3.4-SNAPSHOT</version>
 
     <name>final-framework</name>
     <description>Final framework with Spring Boot</description>
@@ -43,6 +43,7 @@
     </modules>
 
     <properties>
+        <final.version>1.3.4-SNAPSHOT</final.version>
         <dubbo.boot.version>2.7.8</dubbo.boot.version>
         <findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
@@ -91,14 +92,14 @@
             <dependency>
                 <groupId>org.ifinalframework.annotation</groupId>
                 <artifactId>final-annotation</artifactId>
-                <version>1.3.3</version>
+                <version>${final.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.ifinalframework.auto</groupId>
                 <artifactId>final-auto</artifactId>
-                <version>1.3.3</version>
+                <version>${final.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -108,57 +109,57 @@
             <dependency>
                 <groupId>org.ifinalframework</groupId>
                 <artifactId>final-framework</artifactId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinalframework</groupId>
                 <artifactId>final-core</artifactId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinalframework</groupId>
                 <artifactId>final-json</artifactId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <artifactId>final-dubbo</artifactId>
                 <groupId>org.ifinalframework</groupId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <artifactId>final-retrofit</artifactId>
                 <groupId>org.ifinalframework</groupId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <artifactId>final-web</artifactId>
                 <groupId>org.ifinalframework</groupId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <artifactId>final-aop</artifactId>
                 <groupId>org.ifinalframework</groupId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <artifactId>final-context</artifactId>
                 <groupId>org.ifinalframework</groupId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <artifactId>final-monitor</artifactId>
                 <groupId>org.ifinalframework</groupId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinalframework</groupId>
                 <artifactId>final-security</artifactId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinalframework</groupId>
                 <artifactId>final-poi</artifactId>
-                <version>1.3.3</version>
+                <version>1.3.4-SNAPSHOT</version>
             </dependency>
             <!-- ==================================================================================================== -->
             <!-- ========================================= final-framework ========================================== -->
