--- a/final-web/pom.xml
+++ b/final-web/pom.xml
@@ -62,6 +62,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
             <artifactId>auto-spring</artifactId>
             <groupId>org.ifinalframework.auto</groupId>
         </dependency>
